--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p class="title">BSIT-2A</p>
         <p>Centro Escolar University</p>
         <div style="margin: 24px 0;">
-            <a href="#">https://www.facebook.com/leon.jul.9083477?mibextid=LQQJ4d<i class="fa fa-facebook"></i></a>
-            <a href="#">https://www.instagram.com/leonxz12/?igsh=MWN6bnRiOTBndGJiNQ%3D%3D&utm_source=qr<i class="fa fa-instagram"></i></a>
+            <a href="https://www.facebook.com/leon.jul.9083477?mibextid=LQQJ4d"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/leonxz12/?igsh=MWN6bnRiOTBndGJiNQ%3D%3D&utm_source=qr"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-x-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
